--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <u>アンダーバーはuタグで囲むよ！</u>
       <i>斜体はiタグで囲むよ！</i>
       <b>test</b>
-      soccer<br />baseball
+      baseball<br />baseball
       改行したいときは<br />って書くよ！
     </p>
     <h3>1-1-1. h3タグは見出し3だよ！</h3>
