--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <i>斜体はiタグで囲むよ！</i>
       <b>test</b>
       baseball<br />baseball
-      soccer<br />って書くよ！
+      soccer<br />soccer
     </p>
     <h3>1-1-1. h3タグは見出し3だよ！</h3>
     <p>見出しタグはh4,h5,h6とかもあるよ！h1タグが存在しないのにh2とかh3を使うのは良くないよ！</p>
